@@ -1,4 +1,5 @@
 3.4
+ * Add require_endpoint_verification opt for internode encryption (CASSANDRA-9220)
  * Remove duplicate offline compaction tracking (CASSANDRA-11148)
  * fix EQ semantics of analyzed SASI indexes (CASSANDRA-11130)
  * Support long name output for nodetool commands (CASSANDRA-7950)
